# hyprcurl

./: .gitignore  Cargo.toml  README.md
benches/: curl_bench.rs
benchmarks/: pyproject.toml  python_vs_rust_bench.csv  python_vs_rust_bench.py  server.py
book/: book.toml
book/book/: 404.html  CNAME  index.html  print.html  searcher-c2a407aa.js  searchindex-1aebe933.js  toc-b5446dd1.js  toc.html
book/book/advanced/: async.html  python-bindings.html  websocket.html
book/book/api/: core.html  errors.html  types.html
book/book/getting-started/: basic-usage.html  installation.html  quick-start.html
book/book/guide/: browser-impersonation.html  error-handling.html  headers-cookies.html  making-requests.html  ssl-tls.html
book/src/: SUMMARY.md  introduction.md
book/src/advanced/: async.md  python-bindings.md  websocket.md
book/src/api/: core.md  errors.md
book/src/getting-started/: basic-usage.md  installation.md  quick-start.md
book/src/guide/: browser-impersonation.md  error-handling.md  headers-cookies.md  making-requests.md  ssl-tls.md
examples/: async_request.rs  browser_impersonation.rs  comprehensive.rs  debug_ssl.rs  http_request.rs  post_request.rs  proxy_usage.rs  simple_get.rs  simple_request.rs  ssl_debug.rs  ssl_minimal.rs  ssl_simple.rs  ssl_status.rs  ssl_test.rs  ssl_workaround.rs  test_minimal_ssl.rs  test_ssl_combinations.rs  test_urls.rs
src/: async_curl.rs  curl.rs  error.rs  lib.rs  python.rs  types.rs  websocket.rs
tests/: basic_test.rs  callback_test.rs  debug_test.rs  integration_test.rs  integration_tests.rs  request_builder_tests.rs  simple_test.rs  unit_tests.rs  vec_callback_test.rs
