[package]
name = "curl-cffi-rs"
version = "0.1.0"
edition = "2021"
authors = ["Aditya Pratap Singh <adipras1407@gmail.com>"]
description = "A high-performance Rust implementation of curl_cffi with browser fingerprinting support"
documentation = "https://docs.rs/curl-cffi-rs"
repository = "https://github.com/Aditya-PS-05/hyprcurl"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["curl", "http", "browser", "fingerprint", "impersonate"]
categories = ["web-programming::http-client", "api-bindings"]

[package.metadata.docs.rs]
# Build for all platforms
all-features = false
default-target = "x86_64-unknown-linux-gnu"

[lib]
name = "curl_cffi_rs"
crate-type = ["rlib", "cdylib"]  # cdylib for Python bindings

[dependencies]
curl-sys = "0.4"
libc = "0.2"
thiserror = "2.0"
dirs = "5.0"  # For CA certificate detection

# Python bindings
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]
